helm_charts/argocd/argocd_ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
# spec:
#   ingressClassName: nginx
#   rules:  
#   - host: argocd.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argo-cd-argocd-server
#             port:
#               name: https

#   tls:
#   - hosts:
#     - argocd.example.com
#     secretName: mkcert 

# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example
#   namespace: 
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: www.example.com
#       http:
#         paths:
#           - pathType: Prefix
#             backend:
#               service:
#                 name: exampleService
#                 port:
#                   number: 80
#             path: /
#   # This section is only required if TLS is to be enabled for the Ingress
#   tls:
#     - hosts:
#       - www.example.com
#       secretName: mkcert
# ---

#test
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              name: http
    host: argocd.example.com
  # tls:
  # - hosts:
  #   - argocd.example.com
  #   secretName: argo-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              name: https
    host: grpc.argocd.example.com
  # tls:
  # - hosts:
  #   - grpc.argocd.example.com
  #   secretName: argo-tls
